# mock_shootout

./: Cargo.toml  Makefile  README.md  README.sed  README.textile  README.textile.in  build.rs  compare.py  index.textile.in
docs/: _config.yml  foo.wiki  index.html
src/: lib.rs  t_double.rs  t_galvanic_mock.rs  t_mock_derive.rs  t_mock_it.rs  t_mockall.rs  t_mockers.rs  t_mockiato.rs  t_mocktopus.rs  t_pseudo.rs  t_simulacrum.rs
